--- a/public/form.html
+++ b/public/form.html
@@ -53,7 +53,7 @@
                                     <span class="glyphicon glyphicon-picture"></span>
                                     Browse
                                 </button>
-                                <button type="button" class="btn btn-default" ng-click="clearImageInput()">
+                                <button type="button" class="btn btn-default" ng-click="clearImageInput()" ng-disabled="!filename && !model.image">
                                     <span class="glyphicon glyphicon-remove"></span>
                                 </button>
                             </span>
