--- a/public/form.html
+++ b/public/form.html
@@ -18,11 +18,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4>Details</h4>
-                    <div class="form-group" ng-if="isNew && gameService.config.is_giant_bomb_enabled">
+                    <div class="form-group" ng-if="isNew && gameService.config.is_assisted_creation_enabled">
                         <input type="text" class="form-control input-lg" placeholder="Title (required)" ng-model="model.title" ng-change="titleChanged()" name="title" required typeahead="item as item.title for item in getSuggestions($viewValue)" typeahead-min-length="3" typeahead-editable="true" typeahead-on-select="suggestionSelected($item.id)" typeahead-wait-ms="500">
                     </div>
-                    <!-- don't use typeahead if we are editing or if the backend reports missing GB api key -->
-                    <div class="form-group" ng-if="!isNew || !gameService.config.is_giant_bomb_enabled">
+                    <!-- don't use typeahead if we are editing or if the backend reports missing api key for assisted creation -->
+                    <div class="form-group" ng-if="!isNew || !gameService.config.is_assisted_creation_enabled">
                         <input type="text" class="form-control input-lg" placeholder="Title (required)" ng-model="model.title" ng-change="titleChanged()" name="title" required>
                     </div>
                     <div class="form-group">
