--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,6 @@
     <script src="components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="components/angular-upload/angular-upload.min.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="js/g.min.js"></script>
+    <script src="js/g.min.js?1234"></script>
 </body>
 </html>
