Removed old PHP backend

--- a/public/about.html
+++ b/public/about.html
@@ -16,8 +16,15 @@
         <li><a href="http://angular-ui.github.io/bootstrap/">AngularUI Bootstrap</a></li>
         <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
         <li><a href="http://chartjs.org/">Chart.js</a></li>
-        <li><a href="http://github.com/illuminate/database">Illuminate Database</a></li>
         <li><a href="http://momentjs.com/">Moment.js</a></li>
+        <li><a href="http://asp.net/core">ASP.NET Core</a></li>
+        <li><a href="http://docs.microsoft.com/en-us/ef/">Entity Framework Core</a></li>
+    </ul>
+    <p>
+        Previously, it also used:
+    </p>
+    <ul style="list-style: none;">
+        <li><a href="http://github.com/illuminate/database">Illuminate Database</a></li>
         <li><a href="http://slimframework.com/">Slim Framework</a></li>
     </ul>
 </div>
