--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
     <title>g_</title>
-    <link href="components/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet">
+    <link href="vendor/loading-bar.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dark-style.css" rel="stylesheet" ng-if="globalOptions.darkStyle">
     <link href="css/style.css" rel="stylesheet">
@@ -21,11 +21,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-resource.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="components/Chart.js/Chart.min.js"></script>
-    <script src="components/moment/min/moment.min.js"></script>
-    <script src="components/angular-loading-bar/build/loading-bar.min.js"></script>
-    <script src="components/angular-upload/angular-upload.min.js"></script>
-    <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="vendor/Chart.min.js"></script>
+    <script src="vendor/moment.min.js"></script>
+    <script src="vendor/loading-bar.min.js"></script>
+    <script src="vendor/angular-upload.min.js"></script>
+    <script src="vendor/ui-bootstrap-tpls.min.js"></script>
     <script src="js/g.min.js?1234"></script>
 </body>
 </html>
