Added watch script

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,6 @@
     <script src="vendor/loading-bar.min.js"></script>
     <script src="vendor/angular-upload.min.js"></script>
     <script src="vendor/ui-bootstrap-tpls.min.js"></script>
-    <script src="js/g.min.js?1234"></script>
+    <script src="g.min.js?1234"></script>
 </body>
 </html>
