--- a/public/content.html
+++ b/public/content.html
@@ -10,8 +10,8 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="dropdown" dropdown>
-                    <a class="dropdown-toggle hand" dropdown-toggle>
+                <li class="dropdown" uib-dropdown>
+                    <a class="dropdown-toggle hand" uib-dropdown-toggle>
                         <strong>g_</strong> <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" role="menu">
@@ -138,7 +138,7 @@
                 </button>
             </form>
         </div><!--/.nav-collapse -->
-        <div collapse="!ctrl.showFilters" ng-include="'filter.html'"></div>
+        <div uib-collapse="!ctrl.showFilters" ng-include="'filter.html'"></div>
     </div>
 </nav>
 <div class="container-fluid full-height">
