--- a/public/grid-view.html
+++ b/public/grid-view.html
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-    <div class="row" collapse="ctrl.sections.currently_playing">
+    <div class="row" uib-collapse="ctrl.sections.currently_playing">
         <div class="col-lg-4" ng-repeat="game in currentlyPlaying = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div class="row" collapse="ctrl.sections.suggestions">
+    <div class="row" uib-collapse="ctrl.sections.suggestions">
         <div class="col-lg-4" ng-repeat="game in suggestions = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <div class="row" collapse="ctrl.sections.queue">
+    <div class="row" uib-collapse="ctrl.sections.queue">
         <div class="col-lg-4" ng-repeat="game in queue = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
@@ -80,7 +80,7 @@
             </div>
         </div>
     </div>
-    <div class="row" collapse="ctrl.sections.all_games">
+    <div class="row" uib-collapse="ctrl.sections.all_games">
         <div class="col-lg-12 text-center">
             <pagination total-items="ctrl.filtered.length"
                         items-per-page="ctrl.itemsPerPage"
@@ -131,7 +131,7 @@
             </div>
         </div>
     </div>
-    <div class="row" collapse="ctrl.sections.wishlist">
+    <div class="row" uib-collapse="ctrl.sections.wishlist">
         <div class="col-lg-4" ng-repeat="game in wishlist = (ctrl.gameService.getWishlistGames() | search:ctrl.query | orderBy:'wishlist_position')">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
@@ -150,7 +150,7 @@
         </div>
     </div>
 </div>
-<div class="row" collapse="ctrl.sections.statistics">
+<div class="row" uib-collapse="ctrl.sections.statistics">
     <div class="col-md-3">
         <div class="panel panel-default">
             <div class="panel-heading">
