--- a/public/index.html
+++ b/public/index.html
@@ -8,24 +8,25 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
     <title>g_</title>
-    <link href="vendor/loading-bar.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/loading-bar.min.css" rel="stylesheet">
+    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dark-style.css" rel="stylesheet" ng-if="globalOptions.darkStyle">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="full-height">
     <ng-view></ng-view>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-resource.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="vendor/Chart.min.js"></script>
-    <script src="vendor/moment.min.js"></script>
-    <script src="vendor/loading-bar.min.js"></script>
-    <script src="vendor/angular-upload.min.js"></script>
-    <script src="vendor/ui-bootstrap-tpls.min.js"></script>
+    <script src="vendor/js/jquery.min.js"></script>
+    <script src="vendor/js/angular.min.js"></script>
+    <script src="vendor/js/angular-animate.min.js"></script>
+    <script src="vendor/js/angular-route.min.js"></script>
+    <script src="vendor/js/angular-resource.min.js"></script>
+    <script src="vendor/js/angular-cookies.min.js"></script>
+    <script src="vendor/js/bootstrap.min.js"></script>
+    <script src="vendor/js/Chart.min.js"></script>
+    <script src="vendor/js/moment.min.js"></script>
+    <script src="vendor/js/loading-bar.min.js"></script>
+    <script src="vendor/js/angular-upload.min.js"></script>
+    <script src="vendor/js/ui-bootstrap-tpls.js"></script>
     <script src="g.min.js?1234"></script>
 </body>
 </html>
