--- a/public/list-view.html
+++ b/public/list-view.html
@@ -9,7 +9,7 @@
                 Currently Playing
                 <span class="badge section-badge">{{currentlyPlaying.length}}</span>
             </h1>
-            <div class="list-group" collapse="ctrl.sections.currently_playing">
+            <div class="list-group" uib-collapse="ctrl.sections.currently_playing">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in currentlyPlaying = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
@@ -33,7 +33,7 @@
                 <span class="glyphicon pull-right collapse-icon glyphicon-refresh" ng-click="ctrl.refreshSuggestions($event)"></span>
                 Why not try...
             </h1>
-            <div class="list-group" collapse="ctrl.sections.suggestions">
+            <div class="list-group" uib-collapse="ctrl.sections.suggestions">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in suggestions = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
@@ -57,7 +57,7 @@
                 Queue
                 <span class="badge section-badge">{{queue.length}}</span>
             </h1>
-            <div class="list-group" collapse="ctrl.sections.queue">
+            <div class="list-group" uib-collapse="ctrl.sections.queue">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in queue = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')"
                    ng-click="ctrl.gameSelected(game)"
@@ -81,7 +81,7 @@
                 All Games
                 <span class="badge section-badge">{{ctrl.filtered.length}}</span>
             </h1>
-            <div class="list-group" collapse="ctrl.sections.all_games">
+            <div class="list-group" uib-collapse="ctrl.sections.all_games">
                 <a class="list-group-item hand overflow-ellipsis" id="game{{game.id}}"
                    ng-repeat="game in ctrl.filtered = (ctrl.gameService.getOwnedGames() | search:ctrl.query | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
@@ -105,7 +105,7 @@
                 Wishlist
                 <span class="badge section-badge">{{wishlist.length}}</span>
             </h1>
-            <div class="list-group" collapse="ctrl.sections.wishlist">
+            <div class="list-group" uib-collapse="ctrl.sections.wishlist">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in wishlist = (ctrl.gameService.getWishlistGames() | search:ctrl.query | orderBy:'wishlist_position')"
                    ng-click="ctrl.gameSelected(game)"
@@ -138,7 +138,7 @@
             <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.statistics ? 'right' : 'down'}}"></span>
             Statistics
         </h1>
-        <div collapse="ctrl.sections.statistics">
+        <div uib-collapse="ctrl.sections.statistics">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h1 class="panel-title overflow-ellipsis">
