--- a/public/game.html
+++ b/public/game.html
@@ -13,7 +13,7 @@
         </h1>
     </div>
     <div class="panel-body media game-panel-body" ng-style="heightStyle">
-        <div class="pull-left game-cover-container">
+        <div class="media-left game-cover-container">
             <img class="media-object game-cover img-rounded" ng-if="game.image" ng-src="{{game.decachedImage}}" alt="Game cover">
             <div class="panel panel-default" ng-if="!game.image">
                 <div class="panel-body text-center">
