Fixed old ui-bootstrap alerts

--- a/public/manage.html
+++ b/public/manage.html
@@ -10,9 +10,9 @@
         <div class="container-fluid">
             <div class="row" ng-if="error">
                 <div class="col-md-12">
-                    <alert type="danger" close="closeAlert()">
+                    <div uib-alert class="alert-danger" close="closeAlert()">
                         {{error}}
-                    </alert>
+                    </div>
                 </div>
             </div>
             <div class="row">
