--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -2,119 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
   <script src="https://cdn.jsdelivr.net/vue/2.3.2/vue.js"></script>
+  <script src="https://use.fontawesome.com/67e38cb942.js"></script>
   <title>g_</title>
   <style>
-    body {
-      padding: 20px;
+    .container-fluid {
+      margin-top: 70px;
     }
     .cover {
-      height: 200px;
+      height: 250px;
       text-align: center;
     }
     .cover img {
-      max-width: 100%;
       max-height: 100%;
     }
   </style>
 </head>
 <body>
-  <div class="container" id="app">
-    <div class="row">
-      <div class="col-xs-4">
-        <h4 v-if="selectedUser">{{ selectedUser.username }}'s games</h4>
-      </div>
-      <div class="col-xs-4">
+  <div id="app">
+    <nav class="navbar fixed-top navbar-light bg-light">
+      <span class="navbar-text" v-if="selectedUser">
+        {{ selectedUser.username }}'s games
+      </span>
+      <form class="form-inline">
         <button type="button"
-                class="btn btn-primary"
+                class="btn btn-success mr-2"
                 :disabled="!!newGame"
                 @click="addGame"
                 v-if="canEdit">
-          Add
+          New
         </button>
         <button type="button"
-                class="btn btn-default"
+                class="btn btn-outline-primary mr-2"
                 :disabled="!!isSettingsOpen"
                 @click="openSettings"
                 v-if="canEdit">
           Settings
         </button>
-      </div>
-      <div class="col-xs-4">
-        <div class="inline-form">
-          <input type="search"
-                 class="form-control"
-                 placeholder="Search"
-                 v-model="search">
+        <input type="search"
+                class="form-control"
+                placeholder="Search"
+                v-model="search">
+      </form>
+    </nav>
+    <div class="container-fluid">
+      <div class="row" v-if="isSettingsOpen">
+        <div class="col">
+          <h2>Settings</h2>
+          <system-settings :genres="genres"
+                          :platforms="platforms"
+                          :tags="tags"
+                          @remove-genre="genreRemoved"
+                          @remove-platform="platformRemoved"
+                          @remove-tag="tagRemoved"
+                          @close="closeSettings">
+          </system-settings>
         </div>
       </div>
-    </div>
-    <div class="row" v-if="isSettingsOpen">
-      <div class="col-xs-12">
-        <h2>Settings</h2>
-        <system-settings :genres="genres"
-                         :platforms="platforms"
-                         :tags="tags"
-                         @remove-genre="genreRemoved"
-                         @remove-platform="platformRemoved"
-                         @remove-tag="tagRemoved"
-                         @close="closeSettings">
-        </system-settings>
+      <div class="row" v-if="!!newGame">
+        <div class="col col-lg-10 col-xl-8 mx-lg-auto pb-3 px-2">
+          <game-item :game="newGame"
+                     :all-genres="genres"
+                     :all-platforms="platforms"
+                     :all-tags="tags"
+                     :is-editable="canEdit"
+                     :is-new="true"
+                     @save="gameSaved"
+                     @cancel="newGameCancelled">
+          </game-item>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <game-item v-if="!!newGame"
-                   :game="newGame"
-                   :all-genres="genres"
-                   :all-platforms="platforms"
-                   :all-tags="tags"
-                   :is-editable="canEdit"
-                   :is-new="true"
-                   @save="gameSaved"
-                   @cancel="newGameCancelled">
-        </game-item>
-        <hr v-if="!!newGame">
-        <game-item v-for="game in filteredGames"
-                   :key="game.id"
-                   :game="game"
-                   :all-genres="genres"
-                   :all-platforms="platforms"
-                   :all-tags="tags"
-                   :is-editable="canEdit"
-                   :is-new="false"
-                   @save="gameSaved"
-                   @remove="gameRemoved">
-        </game-item>
+      <div class="row">
+        <div class="col-12 col-lg-10 col-xl-6 mx-lg-auto pb-3 px-2"
+             v-for="game in filteredGames">
+          <game-item :key="game.id"
+                     :game="game"
+                     :all-genres="genres"
+                     :all-platforms="platforms"
+                     :all-tags="tags"
+                     :is-editable="canEdit"
+                     :is-new="false"
+                     @save="gameSaved"
+                     @remove="gameRemoved">
+          </game-item>
+        </div>
       </div>
     </div>
   </div>
 
   <script type="text/x-template" id="game-item-template">
-    <div class="panel panel-default">
-      <div class="row panel-body">
-        <div class="col-xs-4">
+    <div class="card h-100">
+      <div class="row card-body">
+        <div class="col-4">
           <div class="cover">
-            <img :src="game.image" class="img-rounded" v-if="game.image">
+            <img :src="game.image" class="rounded img-fluid" v-if="game.image">
             <h4 v-else>No image</h4>
           </div>
-          <form ref="imageForm" @submit.prevent @keyup.esc="cancel" v-if="isEditing">
-            <input type="file" @change="updateImage"><br>
+          <form class="mt-3" ref="imageForm" @submit.prevent @keyup.esc="cancel" v-if="isEditing">
+            <label class="custom-file">
+              <input type="file" class="custom-file-input" @change="updateImage">
+              <span class="custom-file-control">{{ imageFile && imageFile.name }}</span>
+            </label>
             <button type="button"
-                    class="btn btn-danger"
+                    class="btn btn-outline-danger mt-3"
                     @click="removeImage"
                     v-if="(edited.image || imageFile) && !imageRemoved">
-              Delete
+              Delete image
             </button>
           </form>
         </div>
-        <div class="col-xs-8">
-          <form class="form-horizontal" @submit.prevent="save" @keyup.esc="cancel" v-if="isEditing">
-            <div class="form-group">
-              <div class="col-xs-8">
+        <div class="col-8">
+          <form @submit.prevent="save" @keyup.esc="cancel" v-if="isEditing">
+            <div class="form-row">
+              <div class="col-8 form-group">
                 <input type="text"
                        class="form-control"
                        placeholder="Title"
@@ -122,7 +126,7 @@
                        v-model="edited.title"
                        v-focus>
               </div>
-              <div class="col-xs-4">
+              <div class="col-4 form-group">
                 <input type="number"
                        class="form-control"
                        placeholder="Release year"
@@ -130,107 +134,109 @@
                        v-model.number="edited.year">
               </div>
             </div>
-            <div class="form-group">
-              <div class="col-xs-8">
+            <div class="form-row">
+              <div class="col-8 form-group">
                 <input type="text"
                        class="form-control"
                        placeholder="Sort as"
                        v-model="edited.sort_as">
               </div>
-              <div class="col-xs-4">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" v-model="edited.currently_playing">
+              <div class="col-4 form-group">
+                <div class="form-check">
+                  <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" v-model="edited.currently_playing">
                     Playing
                   </label>
                 </div>
               </div>
             </div>
-            <div class="form-group">
-              <div class="col-xs-6">
+            <div class="form-row">
+              <div class="col form-group">
                 <input type="text"
                        class="form-control"
                        placeholder="Developer"
                        v-model="edited.developer">
               </div>
-              <div class="col-xs-6">
+              <div class="col form-group">
                 <input type="text"
                        class="form-control"
                        placeholder="Publisher"
                        v-model="edited.publisher">
               </div>
             </div>
-            <div class="form-group">
-              <div class="col-xs-6">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" v-model="edited.finished">
+            <div class="form-row">
+              <div class="col form-group">
+                <div class="form-check">
+                  <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" v-model="edited.finished">
                     Finished
                   </label>
                 </div>
               </div>
-              <div class="col-xs-6">
+              <div class="col form-group">
                 <input type="text"
                        class="form-control"
                        placeholder="--:--:-- (playtime)"
                        v-model="edited.playtime">
               </div>
             </div>
-            <div class="form-group">
-              <div class="col-xs-4">
+            <div class="form-row">
+              <div class="col form-group">
                 <h5>Platforms</h5>
                 <descriptor-list :items="allPlatforms" v-model="edited.platform_ids"></descriptor-list>
               </div>
-              <div class="col-xs-4">
+              <div class="col form-group">
                 <h5>Genres</h5>
                 <descriptor-list :items="allGenres" v-model="edited.genre_ids"></descriptor-list>
               </div>
-              <div class="col-xs-4">
+              <div class="col form-group">
                 <h5>Tags</h5>
                 <descriptor-list :items="allTags" v-model="edited.tag_ids"></descriptor-list>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">
-              Save
-            </button>
-            <button type="button" class="btn btn-danger" @click="remove" v-if="!isNew">
-              Delete
-            </button>
-            <button type="button" class="btn btn-default" @click="cancel">
-              Cancel
-            </button>
+            <div class="d-flex justify-content-between">
+              <div>
+                <button type="submit" class="btn btn-success">
+                  Save
+                </button>
+                <button type="button" class="btn btn-outline-secondary" @click="cancel">
+                  Cancel
+                </button>
+              </div>
+              <button type="button" class="btn btn-outline-danger" @click="remove" v-if="!isNew">
+                Delete
+              </button>
+            </div>
           </form>
-          <div v-else>
-            <h4>
-              <span class="glyphicon glyphicon-play-circle" v-if="game.currently_playing"></span>
-              {{ game.title }}
-              <small v-if="game.year">({{ game.year }})</small>
-            </h4>
-            <p>
-              {{ game.developer }}
-              <span v-if="game.developer && game.publisher"> / </span>
-              {{ game.publisher }}
-            </p>
-            <p>
-              <span class="glyphicon glyphicon-check" v-if="game.finished === 1"></span>
-              <span class="glyphicon glyphicon-unchecked" v-else></span>
-              <span v-if="game.playtime">{{ game.playtime }}</span>
-              <span v-else>--:--:--</span>
-            </p>
-            <p>
-              <span class="glyphicon glyphicon-hdd"></span> {{ platforms }}
-            </p>
-            <p>
-              <span class="glyphicon glyphicon-knight"></span> {{ genres }}
-            </p>
-            <p>
-              <span class="glyphicon glyphicon-tag"></span> {{ tags }}
-            </p>
-            <div v-if="isEditable">
-              <button type="button" class="btn btn-default" @click="edit">
+          <div class="h-100 d-flex flex-column justify-content-between" v-else>
+            <div>
+              <h4>
+                <i class="fa fa-play-circle" v-if="game.currently_playing"></i>
+                {{ game.title }}
+                <small v-if="game.year">({{ game.year }})</small>
+              </h4>
+              <p>
+                {{ game.developer }}
+                <span v-if="game.developer && game.publisher"> / </span>
+                {{ game.publisher }}
+              </p>
+              <p>
+                <i class="fa fa-check-square-o" v-if="game.finished === 1"></i>
+                <i class="fa fa-square-o" v-else></i>
+                <span v-if="game.playtime">{{ game.playtime }}</span>
+                <span v-else>--:--:--</span>
+              </p>
+              <p>
+                <i class="fa fa-gamepad"></i> {{ platforms }}<br>
+                <i class="fa fa-book"></i> {{ genres }}<br>
+                <i class="fa fa-tag"></i> {{ tags }}
+              </p>
+            </div>
+            <div class="d-flex justify-content-between" v-if="isEditable">
+              <button type="button" class="btn btn-outline-primary" @click="edit">
                 Edit
               </button>
-              <button type="button" class="btn btn-danger" @click="remove">
+              <button type="button" class="btn btn-outline-danger" @click="remove">
                 Delete
               </button>
             </div>
@@ -242,9 +248,13 @@
 
   <script type="text/x-template" id="descriptor-list-template">
     <div>
-      <div class="checkbox" v-for="item in items">
-        <label>
-          <input type="checkbox" v-model="cloned" :value="item.id" @change="update">
+      <div class="form-check" v-for="item in items">
+        <label class="form-check-label">
+          <input type="checkbox"
+                 class="form-check-input"
+                 v-model="cloned"
+                 :value="item.id"
+                 @change="update">
           {{ item.name }}
         </label>
       </div>
@@ -254,23 +264,26 @@
   <script type="text/x-template" id="system-settings-template">
     <div>
       <div class="row">
-        <div class="col-xs-4">
+        <div class="col-4">
+          <h4>Genres</h4>
           <descriptors-editor :items="genres"
                               @remove="removeGenre">
           </descriptors-editor>
         </div>
-        <div class="col-xs-4">
+        <div class="col-4">
+          <h4>Platforms</h4>
           <descriptors-editor :items="platforms"
                               @remove="removePlatform">
           </descriptors-editor>
         </div>
-        <div class="col-xs-4">
+        <div class="col-4">
+          <h4>Tags</h4>
           <descriptors-editor :items="tags"
                               @remove="removeTag">
           </descriptors-editor>
         </div>
       </div>
-      <button type="button" class="btn btn-default" @click="close">
+      <button type="button" class="btn btn-outline-secondary" @click="close">
         Close
       </button>
     </div>
@@ -280,7 +293,7 @@
     <ul class="list-unstyled">
       <li v-for="item in items">
         <a href="" @click.prevent="remove(item)">
-          <span class="glyphicon glyphicon-remove"></span>
+          <span class="fa fa-times"></span>
         </a>
         {{ item.name }} ({{ item.short_name }})
       </li>
