--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -335,12 +335,12 @@
     </div>
   </script>
 
-  <script src="api.js"></script>
-  <script src="focus.js"></script>
-  <script src="descriptor-list.js"></script>
-  <script src="game-item.js"></script>
-  <script src="descriptors-editor.js"></script>
-  <script src="system-settings.js"></script>
-  <script src="app.js"></script>
+  <script src="js/api.js"></script>
+  <script src="js/focus.js"></script>
+  <script src="js/descriptor-list.js"></script>
+  <script src="js/game-item.js"></script>
+  <script src="js/descriptors-editor.js"></script>
+  <script src="js/system-settings.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
