--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -58,7 +58,8 @@
         <input type="search"
                 class="form-control"
                 placeholder="Search"
-                v-model="search">
+                :value="search"
+                @input="debouncedSearch">
       </form>
     </nav>
     <div class="container-fluid">
