--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -125,11 +125,12 @@
           </div>
           <form class="mt-3" ref="imageForm" @submit.prevent @keyup.esc="cancel" v-if="isEditing">
             <label class="custom-file">
-              <input type="file" class="custom-file-input" @change="updateImage">
+              <input type="file" class="custom-file-input" :disabled="isSaving" @change="updateImage">
               <span class="custom-file-control">{{ imageFile && imageFile.name }}</span>
             </label>
             <button type="button"
                     class="btn btn-outline-danger mt-3"
+                    :disabled="isSaving"
                     @click="removeImage"
                     v-if="(edited.image || imageFile) && !imageRemoved">
               Delete image
@@ -229,14 +230,14 @@
             </div>
             <div class="d-flex justify-content-between">
               <div>
-                <button type="submit" class="btn btn-success">
+                <button type="submit" class="btn btn-success" :disabled="isSaving">
                   Save
                 </button>
-                <button type="button" class="btn btn-outline-secondary" @click="cancel">
+                <button type="button" class="btn btn-outline-secondary" :disabled="isSaving" @click="cancel">
                   Cancel
                 </button>
               </div>
-              <button type="button" class="btn btn-outline-danger" @click="remove" v-if="!isNew">
+              <button type="button" class="btn btn-outline-danger" :disabled="isSaving" @click="remove" v-if="!isNew">
                 Delete
               </button>
             </div>
