--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -4,9 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/vue/2.3.2/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://use.fontawesome.com/67e38cb942.js"></script>
   <title>g_</title>
   <style>
@@ -99,9 +102,9 @@
       </div>
       <div class="row">
         <div class="col-12 col-lg-10 col-xl-6 mx-lg-auto pb-3"
-             v-for="game in filteredGames">
-          <game-item :key="game.id"
-                     :game="game"
+             v-for="game in filteredGames"
+             :key="game.id">
+          <game-item :game="game"
                      :all-genres="sortedGenres"
                      :all-platforms="sortedPlatforms"
                      :all-tags="sortedTags"
@@ -280,7 +283,7 @@
 
   <script type="text/x-template" id="descriptor-list-template">
     <div>
-      <div class="form-check" v-for="item in items">
+      <div class="form-check" v-for="item in items" :key="item.id">
         <label class="form-check-label">
           <input type="checkbox"
                  class="form-check-input"
@@ -333,7 +336,7 @@
 
   <script type="text/x-template" id="descriptors-editor-template">
     <div>
-      <div class="form-row" v-for="item in items">
+      <div class="form-row" v-for="item in items" :key="item.id">
         <div class="col-6 form-group">
           <input type="text"
                  class="form-control"
